--- a/src/Dashboards.Sdk/Dashboards.Sdk.csproj
+++ b/src/Dashboards.Sdk/Dashboards.Sdk.csproj
@@ -27,8 +27,8 @@
 		<PackageReference Include="Nexus.Link.Libraries.Core" Version="5.20.0" />
 		<PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.10.4" />
 		<PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.13.2" />
-		<PackageReference Include="Nexus.Link.Libraries.Web" Version="5.31.1" />
-		<PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.5.3-alpha10" />
+		<PackageReference Include="Nexus.Link.Libraries.Web" Version="5.31.2" />
+		<PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.5.3" />
 	</ItemGroup>
 
 	<ItemGroup>
