--- a/src/WorkflowEngine.Sdk.AspNet/WorkflowEngine.Sdk.AspNet.csproj
+++ b/src/WorkflowEngine.Sdk.AspNet/WorkflowEngine.Sdk.AspNet.csproj
@@ -34,7 +34,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.AspNet</PackageId>
-    <Version>2.1.18</Version>
+    <Version>2.2.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -44,6 +44,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      2.2.0 Support for searching/browsing instances, versions and forms
       2.1.18 Bump 
       2.1.0 netcoreapp3.1
       2.0.1 Bump
