--- a/test/Capabilities.WorkflowConfiguration.UnitTests/Capabilities.WorkflowConfiguration.UnitTests.csproj
+++ b/test/Capabilities.WorkflowConfiguration.UnitTests/Capabilities.WorkflowConfiguration.UnitTests.csproj
@@ -31,8 +31,8 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.11.0-alpha01" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.5.3-alpha10" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.11.0" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.5.3" />
   </ItemGroup>
 
   
