--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -35,9 +35,9 @@
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.10.4" />
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.13.2" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.31.2" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.11.0" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.11.1" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.5.3" />
-    <PackageReference Include="Nexus.Link.Components.WorkflowMgmt.Abstract" Version="2.1.0" />
+    <PackageReference Include="Nexus.Link.Components.WorkflowMgmt.Abstract" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -63,7 +63,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>6.17.0</Version>
+    <Version>6.18.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -73,6 +73,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      6.18.0 IFormOverviewService/Controller
       6.17.0 Support for searching/browsing instances, versions and forms
       6.16.3 Bump
 	  6.16.2 A Workflow from Nexus.Link.WorkflowEngine.Sdk.Services.Administration.WorkflowService now contains correct type of State
