--- a/src/WorkflowEngine.Sdk.AspNet/WorkflowEngine.Sdk.AspNet.csproj
+++ b/src/WorkflowEngine.Sdk.AspNet/WorkflowEngine.Sdk.AspNet.csproj
@@ -34,7 +34,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.AspNet</PackageId>
-    <Version>2.3.2</Version>
+    <Version>2.3.3</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -44,6 +44,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      2.3.3 Bump
       2.3.2 Mgmt: FormsController is IReadAllWithPaging
       2.3.1 Mgmt: FormsController implements IFormService
       2.3.0 IFormOverviewService/Controller
