--- a/src/Dashboards.Sdk/Dashboards.Sdk.csproj
+++ b/src/Dashboards.Sdk/Dashboards.Sdk.csproj
@@ -28,7 +28,7 @@
 		<PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.10.4" />
 		<PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.13.2" />
 		<PackageReference Include="Nexus.Link.Libraries.Web" Version="5.31.2" />
-		<PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.5.3" />
+		<PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.5.4" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -37,7 +37,7 @@
 
 	<PropertyGroup>
 		<PackageId>Nexus.Link.Dashboards.Sdk</PackageId>
-		<Version>1.0.1</Version>
+		<Version>1.0.2</Version>
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 		<PackageTags>nexus;link;fulcrum;lever</PackageTags>
 		<Authors>XLENT Link</Authors>
@@ -47,6 +47,7 @@
 		<Copyright>Copyright ©2022 Xlent Link AB</Copyright>
 		<IncludeSymbols>true</IncludeSymbols>
 		<PackageReleaseNotes>
+			1.0.2 Bump
 			1.0.1 Url fix
 			1.0.0 Initial release 
 		</PackageReleaseNotes>
