--- a/test/Capabilities.WorkflowConfiguration.UnitTests/Capabilities.WorkflowConfiguration.UnitTests.csproj
+++ b/test/Capabilities.WorkflowConfiguration.UnitTests/Capabilities.WorkflowConfiguration.UnitTests.csproj
@@ -27,12 +27,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
-    <PackageReference Include="Shouldly" Version="4.0.3" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.11.1" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.6.0-alpha02" />
+    <PackageReference Include="Shouldly" Version="4.1.0" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.11.2-alfpha01" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.6.0-alpha03" />
   </ItemGroup>
 
   
