--- a/src/Misc.AspNet.Sdk/Misc.AspNet.Sdk.csproj
+++ b/src/Misc.AspNet.Sdk/Misc.AspNet.Sdk.csproj
@@ -40,7 +40,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Misc.AspNet.Sdk</PackageId>
-    <Version>1.1.0</Version>
+    <Version>1.1.0-alfa01</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
