--- a/NuGet.config
+++ b/NuGet.config
@@ -5,5 +5,6 @@
   <packageSources>
     <add key="nexus-link" value="https://pkgs.dev.azure.com/nexuslink/6ea7c57e-8f91-494b-9ccf-880f7611b745/_packaging/nexus-nugets/nuget/v3/index.json" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="Local Nuget" value="D:\Xlent Link\LocalNuget" />
   </packageSources>
 </configuration>
