--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -35,7 +35,7 @@
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.12.0" />
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.15.1" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.31.3" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.11.2-alfpha01" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.11.2-alpha3" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.6.0-alpha03" />
     <PackageReference Include="Nexus.Link.Components.WorkflowMgmt.Abstract" Version="2.1.6-alpha02" />
   </ItemGroup>
@@ -63,7 +63,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>6.19.0-alpha01</Version>
+    <Version>6.19.0-alpha13</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
