--- a/test/Capabilities.WorkflowConfiguration.UnitTests/Capabilities.WorkflowConfiguration.UnitTests.csproj
+++ b/test/Capabilities.WorkflowConfiguration.UnitTests/Capabilities.WorkflowConfiguration.UnitTests.csproj
@@ -31,7 +31,7 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="Shouldly" Version="4.1.0" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.11.2-alfpha01" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.11.2-alpha3" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.6.0-alpha03" />
   </ItemGroup>
 
