--- a/test/WorkflowEngine.Sdk.Persistent.Abstract.UnitTests/WorkflowEngine.Sdk.Persistent.Abstract.UnitTests.csproj
+++ b/test/WorkflowEngine.Sdk.Persistent.Abstract.UnitTests/WorkflowEngine.Sdk.Persistent.Abstract.UnitTests.csproj
@@ -9,7 +9,7 @@
   <!-- Nugets for the test framework -->
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.11.2-alfpha01" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.11.2-alpha3" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.6.0-alpha03" />
     <PackageReference Include="Nexus.Link.Components.WorkflowMgmt.Abstract" Version="2.1.6-alpha02" />
     <PackageReference Include="xunit" Version="2.4.2" />
