--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -28,16 +28,10 @@
   <!-- Publish symbols -->
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.26.0" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.11.2-alpha01" />
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.12.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.15.1" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.33.0" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.11.1" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.5.4" />
-    <PackageReference Include="Nexus.Link.Components.WorkflowMgmt.Abstract" Version="2.1.5" />
+    <PackageReference Include="Nexus.Link.Components.WorkflowMgmt.Abstract" Version="2.1.6-alpha05" />
   </ItemGroup>
 
   <ItemGroup>
